<resources>
    <string name="app_name">Movies</string>
    <string name="movie_image">movie image</string>
    <string name="message_no_internet">No internet connection</string>
    <string name="message_movie_list_empty">Movie list is empty</string>
    <string name="star_icon">Star icon</string>
    <string name="release_date">Release date:</string>
    <string name="rating">Rating</string>
    <string name="description">Overview</string>
    <string name="sort_by_rating">Sort by rating</string>
    <string name="sort_by_popularity">Sort by popularity</string>
    <string name="AndroidManifest_Detail">Movie Detail</string>
    <string name="trailer">Trailer</string>
    <string name="movie_trailer_play_icon">Movie trailer play icon</string>
    <string name="message_reviews">Reviews</string>
    <string name="text_trailer_image">Trailer image</string>
    <string name="add_to_favorite">Add to favorites</string>
    <string name="text_remove_from_favorite">Remove from favorites</string>
</resources>
