<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/detail_top_layout"/>

        <Button
            android:id="@+id/favorite_bn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_favorite"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:background="@color/colorAccent"/>

        <TextView
            android:id="@+id/movie_overview_label_tv"
            style="@style/styleTextView"
            android:layout_width="wrap_content"
            android:text="@string/description"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_overview_tv"
            android:layout_width="match_parent"
            style="@style/styleTextView"
            android:layout_marginEnd="8dp"
            tools:text = "Some text"/>

        <TextView
            android:id="@+id/review_label_tv"
            android:layout_width="wrap_content"
            style="@style/styleTextView"
            android:textStyle="bold"
            android:text="@string/message_reviews"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/reviews_rv"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scrollbars="vertical"
            android:layout_margin="16dp"/>

        <TextView
            android:id="@+id/trailer_label_tv"
            android:layout_width="wrap_content"
            style="@style/styleTextView"
            android:textStyle="bold"
            android:text="@string/trailer"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailers_rv"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scrollbars="vertical"
            android:layout_margin="16dp"/>

    </LinearLayout>


</ScrollView>