<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/image_iv"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_iv"
            tools:text="Movie title" />

        <TextView
            android:id="@+id/release_date_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/release_date"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorSecondaryText"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/release_date_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_tv" />

        <TextView
            android:id="@+id/release_date_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/release_date_label_tv"
            app:layout_constraintTop_toBottomOf="@+id/title_tv"
            tools:text="2008-01-01" />

        <TextView
            android:id="@+id/rating_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/rating"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorSecondaryText"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/rating_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/release_date_tv" />

        <TextView
            android:id="@+id/rating_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/rating"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/rating_label_tv"
            app:layout_constraintTop_toBottomOf="@+id/release_date_tv"
            tools:text="8.0/10.0" />

        <TextView
            android:id="@+id/description_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/description"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorSecondaryText"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/description_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rating_tv" />


        <TextView
            android:id="@+id/description_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/description_label_tv"
            app:layout_constraintTop_toBottomOf="@+id/rating_tv"
            tools:text="Some text" />

        <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_tv"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/colorAccent"/>


        <TextView
            android:id="@+id/trailer_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/trailer"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorSecondaryText"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line" />


        <ImageView
            android:id="@+id/play_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_play"
            android:layout_margin="8dp"
            android:contentDescription="@string/movie_trailer_play_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trailer_label"
            app:layout_constraintEnd_toStartOf="@+id/trailer_tv"/>

        <TextView
            android:id="@+id/trailer_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/play_iv"
            app:layout_constraintTop_toBottomOf="@+id/trailer_label"
            tools:text="www.homepage.com"/>


    </android.support.constraint.ConstraintLayout>
</ScrollView>
